# audio-gen

./: Cargo.toml
.cargo/: config.toml
src/: adsr_envelope.rs  amp_adsr.rs  editor.rs  gain.rs  lib.rs  main.rs  polysynth.rs  ramp_envelope.rs  rodio_adapter.rs  saw_wave.rs  sine_wave.rs  square_wave.rs  stereo_sample.rs  theme.css  traits.rs  voice.rs
xtask/src/: main.rs
