[package]
name = "audio-gen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[lib]
crate-type = ["cdylib", "lib"]